@@ -5,6 +5,9 @@ Changelog
 4.3.1 (unreleased)
 ------------------
 
+- Fix submitting proposals that reference mails.
+ [deiferni]
+
 - Meeting: add editing protocols, creating/downloading/updating protocol documents.
   [deiferni]
 
